# mosquitto-auth-plugin

./: CMakeLists.txt  README.md  mosquitto_auth_plugin.c  sub_matches_sub.c  userdata.h  utils.c  utils.h
test/: test_plugin.c
